@@ -9,6 +9,7 @@
 - Added FlushablePool
 - Added Debug3dRenderer see https://github.com/libgdx/libgdx/pull/3953
 - API Change: moved shape builder logic out of MeshBuilder, see: https://github.com/libgdx/libgdx/pull/3996
+- API Change: Table reset now calls clearChildren, not clear.
 
 [1.9.2]
 - Added TextureArray wrapper see https://github.com/libgdx/libgdx/pull/3807
